# cynthion-tutorials

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/i2s/: README.md  step-1.py  step-2.py  step-3.py
examples/rgmii/: Makefile  README.md  host.py  step-1.py
examples/soc/: Cargo.toml  Makefile  README.md  ila.py  memory.x  top.py
examples/soc/firmware/: Cargo.toml  memory.x
examples/soc/firmware/.cargo/: config.toml
examples/soc/firmware/examples/: acm_serial.rs  hyperram.rs  irq.rs
examples/soc/firmware/src/: hal.rs  lib.rs  log.rs  main.rs
examples/soc/hal/src/: lib.rs
examples/soc/lunasoc-hal/: Cargo.toml
examples/soc/lunasoc-hal/src/: lib.rs  usb.rs
examples/soc/pac/: Cargo.toml  device.x
examples/soc/pac/src/: cpu.rs  generated.rs
examples/uac/: README.md  TODO  step-1.py
examples/wishbone/: README.md  rwmem.py  step-1.py  step-2.py  step-3.py  step-4.py  test.py  test_rwmem.py
examples/ws2812/: README.md  step-1.py  step-2.py
src/gateware/architecture/: cynthion_i2s.py  ecpix5_luna.py
src/gateware/bridge/: __init__.py  stream.py  wishbone.py
src/gateware/interface/: __init__.py  i2s.py  psram.py  rgmii.py  ws2812.py
src/gateware/platform/: cynthion.py  ecpix5.py  ecpix5_luna.py
src/gateware/soc/: __init__.py  generate.py  util.py
src/gateware/soc/cores/: psram.py  timer.py  uart.py
src/gateware/soc/cores/usb/: device.py  ep_in.py
src/gateware/util/: __init__.py  blinky.py  clock_divider.py  edge_detector.py  nco.py
